# math_project

./: README.md  pyproject.toml
brain_games/: cli.py
brain_games.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
